test/integration/good/tuples/tuples-constraints.stan
data {
  (int<lower=0>, real<lower=1>) x;
}
