test/integration/bad/missing_dist_suffix/deprecated_suffix.stan
data {
}
model {
    target += binomial_logit_ccdf_log(1, 0,1);
}